# who-is

./: README.md  requirements.txt
analyse_usage/: analyse_usage.py
dependency_discovery/: dependency_discovery.py
dependency_discovery/results/: 0015@@TP_Arduino_DigitalRain_Anim.json  0015@@ThatProject.json  0671@@RedisModules-ExecuteCommand-for-Windows.json  0Nera@@SynapseOS.json  0TheSpy@@SpyExternal1337hax.json  0ad@@0ad.json  0e4ef622@@wine-discord-ipc-bridge.json  0ffffffffh@@Api-Break-for-x64dbg.json  0intro@@9hist.json  0intro@@plan9.json  0intro@@wmii.json  0ldsk00l@@nestopia.json  0vercl0k@@CVE-2021-28476.json  0vercl0k@@blazefox.json  0vercl0k@@clairvoyance.json  0vercl0k@@kdmp-parser.json  0vercl0k@@ollydbg2-python.json  0vercl0k@@rp.json  0vercl0k@@stuffz.json  0vercl0k@@symbolizer.json  0vercl0k@@udmp-parser.json  0vercl0k@@wtf.json  0voice@@algorithm-structure.json  0voice@@cpp_new_features.json  0voice@@ffmpeg_develop_doc.json  0voice@@introduce_c-cpp_manual.json  0voice@@kernel_new_features.json  0x00pf@@0x00sec_code.json  0x09@@resdet.json  0x09AL@@DNS-Persist.json  0x09AL@@IIS-Raid.json  0x09AL@@RdpThief.json  0x199@@ps4-ipi.json  0x1F9F1@@mem.json  0x1abin@@MultiButton.json  0x1abin@@MultiTimer.json  0x27@@linux.mirai.json  0x36@@oob_events.json  0x36@@powend.json  0x61726b@@YumeEngine.json  (+28790 more)
example_results/results_curl/: Dice-Developer-Team@@Dice.json  ElektraInitiative@@libelektra.json  JosephP91@@curlcpp.json  Kitware@@CMake.json  MonetDB@@MonetDB-old.json  fpw@@avitab.json  (+56 more)
find_call/: CMakeLists.txt  find_call.cpp
find_usage/: find_usage.py
(+263 files in other folders)
